ADCMS-9692 Fix carousel text overlap

--- a/packages/styles/scss/components/carousel/_carousel.scss
+++ b/packages/styles/scss/components/carousel/_carousel.scss
@@ -85,9 +85,9 @@
       // Achieves `sameHeight` effect for card group.
       // The cards must have `height:auto`.
       align-items: stretch;
-      margin-inline-end: calc(
-        #{$spacing-05} + var(--#{$c4d-prefix}--carousel--overflow-hint-size, #{$spacing-05})
-      );
+      // margin-inline-end: calc(
+      //   #{$spacing-05} + var(--#{$c4d-prefix}--carousel--overflow-hint-size, #{$spacing-05})
+      // );
     }
 
     .#{$prefix}--carousel__scroll-contents--scrolling {
